--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <!-- navBar-->
     <div class="nav-container">
       <nav class="navbar">
-        <h1 class="navbar-logo">Tienda.</h1>
-        <h1 class="ver-carrito" id="verCarrito">🛒 <span id="cantidadCarrito" class="cantidad-carrito"></span></h1>
+        <a
+          href="https://www.facebook.com/eltambitofiambreriaygranja/"
+          target="_blank"
+          ><h1 class="navbar-logo">El Tambito</h1></a
+        >
+        <h1 class="ver-carrito" id="verCarrito">
+          🛒 <span id="cantidadCarrito" class="cantidad-carrito"></span>
+        </h1>
       </nav>
     </div>
 
