--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="sweetalert2.min.css">>
     <title>El Tambito</title>
   </head>
   <body>
@@ -11,9 +12,7 @@
     <div class="nav-container">
       <nav class="navbar">
         <a
-          href="https://www.facebook.com/eltambitofiambreriaygranja/"
-          target="_blank"
-          ><h1 class="navbar-logo">El Tambito</h1></a
+          href="https://www.facebook.com/eltambitofiambreriaygranja/" target="_blank"><h1 class="navbar-logo">El Tambito</h1></a
         >
         <h1 class="ver-carrito" id="verCarrito">
           🛒 <span id="cantidadCarrito" class="cantidad-carrito"></span>
@@ -35,7 +34,16 @@
     <!-- modal container -->
     <div id="modal-container" class="modal-container"></div>
 
+
+
+
+
+
+    
+    
     <script src="js/app.js"></script>
     <script src="js/carrito.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="swa/sweetaler.js"></script>
   </body>
 </html>
